// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`full app delegate migration produces a scene-based app delegate 1`] = `
"internal import Expo
import React
import ReactAppDependencyProvider

@main
class AppDelegate: ExpoAppDelegate {


  public override func application(
    _ application: UIApplication,
    didFinishLaunchingWithOptions launchOptions: [UIApplication.LaunchOptionsKey: Any]? = nil
  ) -> Bool {
    let delegate = ReactNativeDelegate()
    let factory = ExpoReactNativeFactory(delegate: delegate)
    delegate.dependencyProvider = RCTAppDependencyProvider()

    reactNativeDelegate = delegate
    reactNativeFactory = factory
// @generated begin expo-scene-launch-options - expo prebuild (DO NOT MODIFY) sync-9a815c188d8a83b08fcc1fc5df2bf2088ec1e1b7
    self.launchOptions = launchOptions
// @generated end expo-scene-launch-options

    // React Native is now started in SceneDelegate.swift.
// #if os(iOS) || os(tvOS)
//     window = UIWindow(frame: UIScreen.main.bounds)
//     factory.startReactNative(
//       withModuleName: "main",
//       in: window,
//       launchOptions: launchOptions)
// #endif

    return super.application(application, didFinishLaunchingWithOptions: launchOptions)
  }
}
"
`;

exports[`removeWindowStartup comments out the window + startReactNative block 1`] = `
"internal import Expo
import React
import ReactAppDependencyProvider

@main
class AppDelegate: ExpoAppDelegate {
  var window: UIWindow?

  var reactNativeDelegate: ExpoReactNativeFactoryDelegate?
  var reactNativeFactory: RCTReactNativeFactory?

  public override func application(
    _ application: UIApplication,
    didFinishLaunchingWithOptions launchOptions: [UIApplication.LaunchOptionsKey: Any]? = nil
  ) -> Bool {
    let delegate = ReactNativeDelegate()
    let factory = ExpoReactNativeFactory(delegate: delegate)
    delegate.dependencyProvider = RCTAppDependencyProvider()

    reactNativeDelegate = delegate
    reactNativeFactory = factory

    // React Native is now started in SceneDelegate.swift.
// #if os(iOS) || os(tvOS)
//     window = UIWindow(frame: UIScreen.main.bounds)
//     factory.startReactNative(
//       withModuleName: "main",
//       in: window,
//       launchOptions: launchOptions)
// #endif

    return super.application(application, didFinishLaunchingWithOptions: launchOptions)
  }
}
"
`;
